# short-url

./: .env.example  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
core/: settings.py  urls.py
lib/utils/: env.py
src/scripts/: app.js
templates/: index.html
templates/layouts/: base.html
url_shortner/: models.py  urls.py  views.py
url_shortner/migrations/: 0001_initial.py  0002_shorturl_is_active.py  0003_shorturl_description.py  0004_alter_shorturl_long_url.py
url_shortner/templates/: shorturl.html
